# runepkg

./: ARCHITECTURE.md  CLEAN_SLATE.md  CONTRIBUTING.md  CURRENT_STATE.md  CURRENT_STATE.md.backup  GCCRS_COMPATIBILITY.md  GEMINI_ALIGNMENT.md  INTERNALS.md  LICENSE  MEMORY_VERIFICATION.md  Makefile.txt  README.md  README_CPP_FFI.md  README_RUST_FFI.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SECURITY_HARDENING.md  TESTING.md  TESTING_FRAMEWORK.md  build_rust.sh  output.txt  runepkg_completion.patch
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
runepkg/: Cargo.toml  Makefile  Makefile.txt  README.md  README_RUST_FFI.md  analyze_memory.sh  build_all.sh  busybox-static_1.37.0-6+b3_amd64.deb  copilot_c++.txt  copilot_instruct.txt  copilot_rust.txt  download_simple_debs.sh  download_test_debs.sh  fetch_debian_sources.list  fetch_debs.sh  fetch_rolling_sources.list  fetchdeb.sh  gemini_gccrs.txt  gemini_gccrs_overview.txt  gemini_total_recall.txt  make_runepkg_config  make_runepkg_deb.sh  memory_test.c  never_asked_to_install_depends.txt  output.txt  performance_test.c  revolutionary_connection.json  rune_bridge  rune_bridge.c  rune_bridge_output.json  runepkg_building.cpp  runepkg_cli.c  runepkg_completion.c  runepkg_completion.h  runepkg_completions  runepkg_config.c  runepkg_config.h  runepkg_cpp_ffi.cpp  runepkg_cpp_ffi.h  runepkg_defensive.c  (+39 more)
runepkg/docs/: bashrc  extended_cpp_ffi_functionality.txt  gemini_idea.txt  interleaved_autocomplete-fix.txt  motd  pkglist_autocomplete?  readme.txt  termux_fix.txt
runepkg/gccrs-src/: runepkg_highlight.rs  runepkg_script.rs
runepkg/old_but_gold/: runepkg_completions
runepkg/src/: exec.rs  lib.rs  script.rs
