[package]
name = "runepkg_ffi"
version = "1.0.0"
edition = "2021"

[lib]
name = "runepkg_ffi"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]

[features]
default = []
clean-slate = []

[build-dependencies]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
